<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorBackground"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:id="@+id/textMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/moviePoster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster_description"/>

            <TextView
                android:id="@+id/titleOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/overview_title"
                 />

            <TextView
                android:id="@+id/textOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleOverview" />

            <TextView
                android:id="@+id/titleInfo"
                app:layout_constraintTop_toBottomOf="@+id/textOverview"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title"
                 />

            <ImageView
                android:id="@+id/infoIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_info_outline_black_24dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/titleInfo"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/icon_info_description"/>

            <TextView
                android:id="@+id/titleStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:text="@string/info_status"
                app:layout_constraintStart_toEndOf="@+id/infoIcon"
                app:layout_constraintTop_toTopOf="@+id/infoIcon" />


            <TextView
                android:id="@+id/textStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/titleStatus"
                app:layout_constraintTop_toBottomOf="@+id/titleStatus" />

            <TextView
                android:id="@+id/titleLanguage"
                android:text="@string/info_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textStatus"
                app:layout_constraintTop_toBottomOf="@+id/textStatus" />

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/titleLanguage"
                app:layout_constraintTop_toBottomOf="@+id/titleLanguage" />

            <TextView
                android:id="@+id/titleRuntime"
                android:text="@string/info_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textLanguage"
                app:layout_constraintTop_toBottomOf="@+id/textLanguage" />

            <TextView
                android:id="@+id/textRuntime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/titleRuntime"
                app:layout_constraintTop_toBottomOf="@+id/titleRuntime" />


            <ImageView
                android:id="@+id/currencyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_attach_money_black_24dp"
                app:layout_constraintTop_toBottomOf="@+id/textRuntime"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/icon_currency_description"/>

            <TextView
                android:id="@+id/titleBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_budget"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                app:layout_constraintStart_toEndOf="@+id/currencyIcon"
                app:layout_constraintTop_toTopOf="@+id/currencyIcon"
                />

            <TextView
                android:id="@+id/textBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/titleBudget"
                app:layout_constraintTop_toBottomOf="@+id/titleBudget"
                />


            <TextView
                android:id="@+id/titleRevenue"
                android:text="@string/info_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textBudget"
                app:layout_constraintTop_toBottomOf="@+id/textBudget" />

            <TextView
                android:id="@+id/textRevenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/titleRevenue"
                app:layout_constraintTop_toBottomOf="@+id/titleRevenue" />

            <TextView
                android:id="@+id/titleProfit"
                android:text="@string/info_profit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textRevenue"
                app:layout_constraintTop_toBottomOf="@+id/textRevenue" />

            <TextView
                android:id="@+id/textProfit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/titleProfit"
                app:layout_constraintTop_toBottomOf="@+id/titleProfit" />






        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>